--- a/Despesas_Carol.html
+++ b/Despesas_Carol.html
@@ -398,6 +398,13 @@
   <textarea id="mensagem" placeholder="Mensagem" required></textarea>
   <button type="submit">Enviar</button>
 </form>
+    fetch('dados.json')
+  .then(response => response.json())
+  .then(data => {
+    console.log(data);
+    // Aqui você pode manipular e mostrar no site
+  })
+  .catch(error => console.error('Erro ao carregar JSON:', error));
     
 <script type="module">
  // Import the functions you need from the SDKs you need
@@ -1305,6 +1312,7 @@ const app = initializeApp(firebaseConfig);
 
 </body>
 </html>
+
 
 
 
