--- a/Despesas_Carol.html
+++ b/Despesas_Carol.html
@@ -1,5 +1,24 @@
 <html lang="pt-BR">
 <head>
+    <script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/12.4.0/firebase-app.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  const firebaseConfig = {
+    apiKey: "AIzaSyDQoS_XsXfWpiHJvAO-5teU9DU_okkt9s8",
+    authDomain: "github-c2b70.firebaseapp.com",
+    projectId: "github-c2b70",
+    storageBucket: "github-c2b70.firebasestorage.app",
+    messagingSenderId: "839517490009",
+    appId: "1:839517490009:web:c8956abe6b920eeb9a5a48"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gerenciador de Contas - Multi-Mês Avançado</title>
@@ -1312,6 +1331,7 @@ const app = initializeApp(firebaseConfig);
 
 </body>
 </html>
+
 
 
 
