--- a/Despesas_Carol.html
+++ b/Despesas_Carol.html
@@ -1328,9 +1328,17 @@ const app = initializeApp(firebaseConfig);
         openTab(null, 'visualizacao'); 
     };
 </script>
-
+const firebaseConfig = {
+  apiKey: "AIzaSyDQoS_XsXfWpiHJvAO-5teU9DU_okkt9s8",
+  authDomain: "github-c2b70.firebaseapp.com",
+  projectId: "github-c2b70",
+  storageBucket: "github-c2b70.firebasestorage.app",
+  messagingSenderId: "839517490009",
+  appId: "1:839517490009:web:c8956abe6b920eeb9a5a48"
+};
 </body>
 </html>
+
 
 
 
