Add Firebase configuration details
Added Firebase configuration to despesa.html.

--- a/despesa.html
+++ b/despesa.html
@@ -1259,6 +1259,15 @@
         
         popularModalDuplicar(); 
     };
+    const firebaseConfig = {
+  apiKey: "AIzaSyDpUTmcyaDyNuEKD7FUzIn3F4XXTJT2gpk",
+  authDomain: "gestao-de-despesas-bc57c.firebaseapp.com",
+  databaseURL: "https://gestao-de-despesas-bc57c-default-rtdb.firebaseio.com",
+  projectId: "gestao-de-despesas-bc57c",
+  storageBucket: "gestao-de-despesas-bc57c.firebasestorage.app",
+  messagingSenderId: "247688928049",
+  appId: "1:247688928049:web:f63a3faec8d39a80122e10"
+};
 </script>
 
 </body>
